alignment correction

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -170,7 +170,6 @@ body {
   background: #312c85;
   color: white;
   padding: 1rem;
-  text-align: left;
   font-weight: 600;
 }
 
